rstsr-mkl-ffi/src/cblas/ffi_extern.rs

    pub fn cblas_dsymm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        B: *const f64,
        ldb: MKL_INT,
        beta: f64,
        C: *mut f64,
        ldc: MKL_INT,
    );
    pub fn cblas_dsyrk(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        beta: f64,
        C: *mut f64,
        ldc: MKL_INT,
    );
    pub fn cblas_dsyrk_batch(
        Layout: CBLAS_LAYOUT,
        Uplo_array: *const CBLAS_UPLO,
        Trans_array: *const CBLAS_TRANSPOSE,
        N_array: *const MKL_INT,
        K_array: *const MKL_INT,
        alpha_array: *const f64,
        A_array: *mut *const f64,
        lda_array: *const MKL_INT,
        beta_array: *const f64,
        C_array: *mut *mut f64,
        ldc_array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_dsyrk_batch_strided(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        stridea: MKL_INT,
        beta: f64,
        C: *mut f64,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_dsyr2k(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        B: *const f64,
        ldb: MKL_INT,
        beta: f64,
        C: *mut f64,
        ldc: MKL_INT,
    );
    pub fn cblas_dtrmm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        B: *mut f64,
        ldb: MKL_INT,
    );
    pub fn cblas_dtrmm_oop(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        B: *const f64,
        ldb: MKL_INT,
        beta: f64,
        C: *mut f64,
        ldc: MKL_INT,
    );
    pub fn cblas_dtrsm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        B: *mut f64,
        ldb: MKL_INT,
    );
    pub fn cblas_dtrsm_oop(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        B: *const f64,
        ldb: MKL_INT,
        beta: f64,
        C: *mut f64,
        ldc: MKL_INT,
    );
    pub fn cblas_dtrsm_batch(
        Layout: CBLAS_LAYOUT,
        Side_Array: *const CBLAS_SIDE,
        Uplo_Array: *const CBLAS_UPLO,
        Transa_Array: *const CBLAS_TRANSPOSE,
        Diag_Array: *const CBLAS_DIAG,
        M_Array: *const MKL_INT,
        N_Array: *const MKL_INT,
        alpha_Array: *const f64,
        A_Array: *mut *const f64,
        lda_Array: *const MKL_INT,
        B_Array: *mut *mut f64,
        ldb_Array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_dtrsm_batch_strided(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        stridea: MKL_INT,
        B: *mut f64,
        ldb: MKL_INT,
        strideb: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_cgemm(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_cgemm3m(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_cgemm_batch(
        Layout: CBLAS_LAYOUT,
        TransA_Array: *const CBLAS_TRANSPOSE,
        TransB_Array: *const CBLAS_TRANSPOSE,
        M_Array: *const MKL_INT,
        N_Array: *const MKL_INT,
        K_Array: *const MKL_INT,
        alpha_Array: *const c_void,
        A_Array: *mut *const c_void,
        lda_Array: *const MKL_INT,
        B_Array: *mut *const c_void,
        ldb_Array: *const MKL_INT,
        beta_Array: *const c_void,
        C_Array: *mut *mut c_void,
        ldc_Array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_cgemm_batch_strided(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        strideb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_cgemm3m_batch(
        Layout: CBLAS_LAYOUT,
        TransA_Array: *const CBLAS_TRANSPOSE,
        TransB_Array: *const CBLAS_TRANSPOSE,
        M_Array: *const MKL_INT,
        N_Array: *const MKL_INT,
        K_Array: *const MKL_INT,
        alpha_Array: *const c_void,
        A_Array: *mut *const c_void,
        lda_Array: *const MKL_INT,
        B_Array: *mut *const c_void,
        ldb_Array: *const MKL_INT,
        beta_Array: *const c_void,
        C_Array: *mut *mut c_void,
        ldc_Array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_cgemm3m_batch_strided(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        strideb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_cgemmt(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_csymm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_csyrk(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_csyrk_batch(
        Layout: CBLAS_LAYOUT,
        Uplo_array: *const CBLAS_UPLO,
        Trans_array: *const CBLAS_TRANSPOSE,
        N_array: *const MKL_INT,
        K_array: *const MKL_INT,
        alpha_array: *const c_void,
        A_array: *mut *const c_void,
        lda_array: *const MKL_INT,
        beta_array: *const c_void,
        C_array: *mut *mut c_void,
        ldc_array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_csyrk_batch_strided(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_csyr2k(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_ctrmm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *mut c_void,
        ldb: MKL_INT,
    );
    pub fn cblas_ctrmm_oop(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_ctrsm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *mut c_void,
        ldb: MKL_INT,
    );
    pub fn cblas_ctrsm_oop(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_ctrsm_batch(
        Layout: CBLAS_LAYOUT,
        Side_Array: *const CBLAS_SIDE,
        Uplo_Array: *const CBLAS_UPLO,
        Transa_Array: *const CBLAS_TRANSPOSE,
        Diag_Array: *const CBLAS_DIAG,
        M_Array: *const MKL_INT,
        N_Array: *const MKL_INT,
        alpha_Array: *const c_void,
        A_Array: *mut *const c_void,
        lda_Array: *const MKL_INT,
        B_Array: *mut *mut c_void,
        ldb_Array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_ctrsm_batch_strided(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        B: *mut c_void,
        ldb: MKL_INT,
        strideb: MKL_INT,
        batch_size: MKL_INT,
    );
